Creating Repositories, creating custom error for repositories, creating queries service and creating in the database!!
