# backend/internal/models/user.go
@@ -1,8 +1,0 @@
-package models
-
-type User struct {
-	DisplayName string
-	PhotoUrl    string
-	Email       string
-	Password    string
-}
